# gps-sam-m10q

./: CMakeLists.txt  LICENSE  README.md
sam_m10q/include/: sample.h
zephyr/: Kconfig.libgpssamm10q  module.yml
